# village

./: .gitignore  flake.nix  pyproject.toml
server/: __init__.py  chat.py  config.py  database.py  init_db.sql  main.py  models.py  schemas.py
server/chat/: __init__.py  memory.py  schemas.py  session.py  stream.py
server/core/: schemas.py
server/database/: connect.py  init.sql
ui/: index.html  package.json  pnpm-lock.yaml
ui/src/: App.css  App.module.css  App.tsx  Chat.tsx  client.ts  index.tsx  state.tsx
ui/src/api/: APIClient.ts  index.ts
ui/src/api/models/: ChatMessage.ts  ChatRole.ts  ChatStreamRequest.ts  ChatThread.ts  NewThreadRequest.ts  Profile.ts  SavedChatMessage.ts
ui/src/api/services/: DefaultService.ts
ui/src/components/: ChatMessage.css  ChatMessage.module.css  ChatMessage.tsx  ChatWindow.css  ChatWindow.module.css  ChatWindow.tsx  ProfileSelect.css  ProfileSelect.tsx  SideBar.css  SideBar.tsx
village/: server.py  web_ui.py
web-ui/: index.html
web-ui/style/: custom.css
