[tool.poetry]
name = "village"
version = "0.1.0"
description = ""
authors = ["Logan Walls <2934282+LoganWalls@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
openai = "^0.28.1"
sqlite-vss = "^0.1.2"
unstructured = {extras = ["all-docs"], version = "^0.10.25"}
sqlmodel = "^0.0.11"
fastapi = "^0.104.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
