[tool.poetry]
name = "village"
version = "0.1.0"
description = ""
authors = ["Logan Walls <2934282+LoganWalls@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
openai = "^0.28.1"
fastapi = {extras = ["all"], version = "^0.104.0"}
websockets = "^11.0.3"
pydantic = "^2.4.2"
sqlite-vss = "^0.1.2"
asyncio = "^3.4.3"
unstructured = {extras = ["all-docs"], version = "^0.10.25"}
sentence-transformers = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
